finish rentals service & controller implementation
