# swagger.json
@@ -21,7 +21,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Biker"
+                  "type": "object"
                 }
               }
             }
@@ -92,7 +92,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Biker"
+                  "type": "object"
                 }
               }
             }
@@ -169,6 +169,48 @@
           "Auth"
         ]
       }
+    },
+    "/api/rentals": {
+      "post": {
+        "operationId": "RentalsController_create",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Rentals"
+        ]
+      }
+    },
+    "/api/rentals/return": {
+      "post": {
+        "operationId": "RentalsController_postReturn",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Rentals"
+        ]
+      }
     }
   },
   "info": {
@@ -191,12 +233,6 @@
       "CreateCreditCardDto": {
         "type": "object",
         "properties": {
-          "holderName": {
-            "type": "string"
-          },
-          "cvv": {
-            "type": "string"
-          },
           "creditCardNumber": {
             "type": "string"
           },
@@ -205,8 +241,6 @@
           }
         },
         "required": [
-          "holderName",
-          "cvv",
           "creditCardNumber",
           "expirationDate"
         ]
@@ -214,34 +248,23 @@
       "CreatePassportDto": {
         "type": "object",
         "properties": {
-          "passportNumber": {
-            "type": "string"
-          },
-          "countryCode": {
-            "type": "string"
-          },
           "expirationDate": {
-            "type": "string",
-            "format": "date"
+            "format": "date-time",
+            "type": "string"
           }
         },
         "required": [
-          "passportNumber",
-          "countryCode",
           "expirationDate"
         ]
       },
       "CreateBikerDto": {
         "type": "object",
         "properties": {
-          "name": {
+          "cpf": {
             "type": "string"
           },
           "birthDate": {
-            "type": "string",
-            "format": "date"
-          },
-          "cpf": {
+            "format": "date-time",
             "type": "string"
           },
           "email": {
@@ -264,7 +287,6 @@
           }
         },
         "required": [
-          "name",
           "birthDate",
           "email",
           "password",
@@ -272,350 +294,14 @@
           "creditCard"
         ]
       },
-      "CreditCard": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "creditCardNumber": {
-            "type": "string"
-          },
-          "holderName": {
-            "type": "string"
-          },
-          "expirationDate": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "creditCardNumber",
-          "holderName",
-          "expirationDate"
-        ]
-      },
-      "Passport": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "passportNumber": {
-            "type": "string"
-          },
-          "countryCode": {
-            "type": "string"
-          },
-          "expirationDate": {
-            "format": "date-time",
-            "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "passportNumber",
-          "countryCode",
-          "expirationDate"
-        ]
-      },
-      "Bike": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "bikeSerial": {
-            "type": "string"
-          },
-          "brand": {
-            "type": "string"
-          },
-          "model": {
-            "type": "string"
-          },
-          "manufactureYear": {
-            "type": "number"
-          },
-          "status": {
-            "type": "string",
-            "enum": [
-              "NEW",
-              "AVAILABLE",
-              "RENTED",
-              "MAINTENANCE_REQUESTED",
-              "UNDER_MAINTENANCE",
-              "RETIRED"
-            ]
-          },
-          "dock": {
-            "$ref": "#/components/schemas/Dock"
-          },
-          "rentals": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rental"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "bikeSerial",
-          "brand",
-          "model",
-          "manufactureYear",
-          "status"
-        ]
-      },
-      "Station": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "stationSerial": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "location": {
-            "type": "string"
-          },
-          "docks": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Dock"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "stationSerial",
-          "name",
-          "location",
-          "docks"
-        ]
-      },
-      "Dock": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "dockSerial": {
-            "type": "string"
-          },
-          "model": {
-            "type": "string"
-          },
-          "manufactureDate": {
-            "format": "date-time",
-            "type": "string"
-          },
-          "status": {
-            "type": "string",
-            "enum": [
-              "OPERATIONAL",
-              "AVAILABLE",
-              "OCCUPIED",
-              "MAINTENANCE_REQUESTED",
-              "UNDER_MAINTENANCE",
-              "DECOMMISSIONED"
-            ]
-          },
-          "bike": {
-            "$ref": "#/components/schemas/Bike"
-          },
-          "station": {
-            "$ref": "#/components/schemas/Station"
-          },
-          "rentals": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rental"
-            }
-          },
-          "returns": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rental"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "dockSerial",
-          "model",
-          "manufactureDate",
-          "status"
-        ]
-      },
-      "Rental": {
-        "type": "object",
-        "properties": {
-          "retunedToDock": {
-            "nullable": true,
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/Dock"
-              }
-            ]
-          },
-          "id": {
-            "type": "string"
-          },
-          "startedAt": {
-            "format": "date-time",
-            "type": "string"
-          },
-          "finishedAt": {
-            "format": "date-time",
-            "type": "string",
-            "nullable": true
-          },
-          "biker": {
-            "$ref": "#/components/schemas/Biker"
-          },
-          "bike": {
-            "$ref": "#/components/schemas/Bike"
-          },
-          "rentedFromDock": {
-            "$ref": "#/components/schemas/Dock"
-          },
-          "initialCharge": {
-            "$ref": "#/components/schemas/Charge"
-          },
-          "extraCharge": {
-            "$ref": "#/components/schemas/Charge"
-          }
-        },
-        "required": [
-          "retunedToDock",
-          "id",
-          "startedAt",
-          "finishedAt",
-          "biker",
-          "bike",
-          "rentedFromDock",
-          "initialCharge"
-        ]
-      },
-      "Biker": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "cpf": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "birthDate": {
-            "format": "date-time",
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          },
-          "status": {
-            "enum": [
-              "PENDING",
-              "ACTIVE"
-            ],
-            "type": "string"
-          },
-          "creditCard": {
-            "$ref": "#/components/schemas/CreditCard"
-          },
-          "passport": {
-            "$ref": "#/components/schemas/Passport"
-          },
-          "charges": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Charge"
-            }
-          },
-          "rentals": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rental"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "birthDate",
-          "email",
-          "password",
-          "status",
-          "creditCard",
-          "charges",
-          "rentals"
-        ]
-      },
-      "Charge": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "requestedAt": {
-            "format": "date-time",
-            "type": "string"
-          },
-          "completedAt": {
-            "format": "date-time",
-            "type": "string",
-            "nullable": true
-          },
-          "amount": {
-            "type": "number"
-          },
-          "biker": {
-            "$ref": "#/components/schemas/Biker"
-          },
-          "rentals": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rental"
-            }
-          },
-          "extras": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rental"
-            }
-          }
-        },
-        "required": [
-          "id",
-          "requestedAt",
-          "completedAt",
-          "amount",
-          "biker",
-          "rentals",
-          "extras"
-        ]
-      },
       "UpdateBikerDto": {
         "type": "object",
         "properties": {
-          "name": {
+          "confirmationPassword": {
             "type": "string"
           },
           "birthDate": {
-            "type": "string",
-            "format": "date"
-          },
-          "confirmationPassword": {
+            "format": "date-time",
             "type": "string"
           },
           "email": {
